Comment/Uncomment functionality is now working
