# doc/api.yaml
@@ -49,7 +49,7 @@ components:
     comment:
       type: object
       properties:
-        id:
+        commentID:
           $ref: "#/components/schemas/commentID"
         userID:
           $ref: "#/components/schemas/identifier"
@@ -701,6 +701,10 @@ paths:
       responses:
         "201":
           description: Comment added successfully
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/comment"
         "400":
           $ref: "#/components/responses/BadRequest"
         "401":
