# service/api/api-handler.go
@@ -13,20 +13,20 @@ func (rt *_router) Handler() http.Handler {
 	rt.router.POST("/session", rt.wrap(rt.login))
 
 	// Block/Unblock routes
-	rt.router.PUT("/users/:userID/bans/:blockedID", rt.wrap(rt.wrapAuth(rt.wrapSelf(rt.banUser))))
-	rt.router.DELETE("/users/:userID/bans/:blockedID", rt.wrap(rt.wrapAuth(rt.wrapSelf(rt.unbanUser))))
+	rt.router.PUT("/users/:username/bans/:blockedID", rt.wrap(rt.wrapAuth(rt.wrapSelf(rt.banUser))))
+	rt.router.DELETE("/users/:username/bans/:blockedID", rt.wrap(rt.wrapAuth(rt.wrapSelf(rt.unbanUser))))
 
 	// Follow/Unfollow route
-	rt.router.PUT("/users/:userID/followers/:followerID", rt.wrap(rt.wrapAuth(rt.followUser)))
-	rt.router.DELETE("/users/:userID/followers/:followerID", rt.wrap(rt.wrapAuth(rt.unfollowUser)))
+	rt.router.PUT("/users/:username/followers/:followerID", rt.wrap(rt.wrapAuth(rt.followUser)))
+	rt.router.DELETE("/users/:username/followers/:followerID", rt.wrap(rt.wrapAuth(rt.unfollowUser)))
 
 	// Upload/Delete photo route
-	rt.router.POST("/users/:userID/photos", rt.wrap(rt.wrapAuth(rt.wrapSelf(rt.uploadPhoto))))
-	rt.router.DELETE("/users/:userID/photos/:photoID", rt.wrap(rt.wrapAuth(rt.wrapSelf(rt.deletePhoto))))
+	rt.router.POST("/users/:username/photos", rt.wrap(rt.wrapAuth(rt.wrapSelf(rt.uploadPhoto))))
+	rt.router.DELETE("/users/:username/photos/:photoID", rt.wrap(rt.wrapAuth(rt.wrapSelf(rt.deletePhoto))))
 
 	// Add/Delete comment route
-	rt.router.POST("/users/:userID/photos/:photoID/comments", rt.wrap(rt.wrapAuth(rt.comment)))
-	rt.router.DELETE("/users/:userID/photos/:photoID/comments/:commentID", rt.wrap(rt.wrapAuth(rt.unComment)))
+	rt.router.POST("/users/:username/photos/:photoID/comments", rt.wrap(rt.wrapAuth(rt.comment)))
+	rt.router.DELETE("/users/:username/photos/:photoID/comments/:commentID", rt.wrap(rt.wrapAuth(rt.unComment)))
 
 	// Get photo route
 	rt.router.GET("/photos/:photoID", rt.wrap(rt.wrapAuth(rt.getPhoto)))
@@ -34,14 +34,14 @@ func (rt *_router) Handler() http.Handler {
 	rt.router.GET("/photos/:photoID/comments", rt.wrap(rt.wrapAuth(rt.getComments)))
 
 	// Add/Delete like route
-	rt.router.PUT("/users/:userID/photos/:photoID/likes/:likeID", rt.wrap(rt.wrapAuth(rt.like)))
-	rt.router.DELETE("/users/:userID/photos/:photoID/likes/:likeID", rt.wrap(rt.wrapAuth(rt.unlike)))
+	rt.router.PUT("/users/:username/photos/:photoID/likes/:likeID", rt.wrap(rt.wrapAuth(rt.like)))
+	rt.router.DELETE("/users/:username/photos/:photoID/likes/:likeID", rt.wrap(rt.wrapAuth(rt.unlike)))
 
 	// Change username route
-	rt.router.PUT("/users/:userID/username", rt.wrap(rt.wrapAuth(rt.changeUsername)))
+	rt.router.PUT("/users/:username/username", rt.wrap(rt.wrapAuth(rt.changeUsername)))
 
 	// Get user profile route
-	rt.router.GET("/users/:userID", rt.wrap(rt.wrapAuth(rt.getUserProfile)))
+	rt.router.GET("/users/:username", rt.wrap(rt.wrapAuth(rt.getUserProfile)))
 
 	// Get users filtered list
 	rt.router.GET("/users", rt.wrap(rt.wrapAuth(rt.getUsers)))
